--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         host: "http://localhost:5005",
         title: "Chatbot",
         container: document.querySelector(".chat-container"),
-        welcomeMessage: "Hi, I'm an assiatant. How may I help you?"
+        welcomeMessage: "Hi, I'm an assistant. How can I help you?"
         //speechRecognition: "en-US",
         //voiceLang: "en-US"
       });
